add my solutions

--- a/DQN/Deep Q Learning.ipynb
+++ b/DQN/Deep Q Learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -11,12 +11,14 @@
     "%matplotlib inline\n",
     "\n",
     "import gym\n",
+    "from gym import wrappers\n",
     "import itertools\n",
     "import numpy as np\n",
     "import os\n",
     "import random\n",
     "import sys\n",
     "import tensorflow as tf\n",
+    "from IPython.display import clear_output\n",
     "\n",
     "if \"../\" not in sys.path:\n",
     "  sys.path.append(\"../\")\n",
@@ -27,18 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-01-13 01:32:44,780] Making new env: Breakout-v0\n"
+     ]
+    }
+   ],
    "source": [
     "env = gym.envs.make(\"Breakout-v0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +77,7 @@
     "            self.output = tf.image.rgb_to_grayscale(self.input_state)\n",
     "            self.output = tf.image.crop_to_bounding_box(self.output, 34, 0, 160, 160)\n",
     "            self.output = tf.image.resize_images(\n",
-    "                self.output, 84, 84, method=tf.image.ResizeMethod.NEAREST_NEIGHBOR)\n",
+    "                self.output, [84, 84], method=tf.image.ResizeMethod.NEAREST_NEIGHBOR)\n",
     "            self.output = tf.squeeze(self.output)\n",
     "\n",
     "    def process(self, sess, state):\n",
@@ -84,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -197,11 +207,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Volumes/HDD/Applications/Anaconda2/anaconda/lib/python2.7/site-packages/tensorflow/python/ops/gradients_impl.py:91: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-6-add3ae41272c>:10 in <module>.: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-01-13 01:32:48,444] From <ipython-input-6-add3ae41272c>:10 in <module>.: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.09366551  0.          0.01409116  0.0271959 ]\n",
+      " [ 0.09366551  0.          0.01409116  0.0271959 ]]\n",
+      "99.7284\n"
+     ]
+    }
+   ],
    "source": [
     "# For Testing....\n",
     "\n",
@@ -232,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -313,7 +359,7 @@
     "                    epsilon_end=0.1,\n",
     "                    epsilon_decay_steps=500000,\n",
     "                    batch_size=32,\n",
-    "                    record_video_every=50):\n",
+    "                    record_video_every=10):\n",
     "    \"\"\"\n",
     "    Q-Learning algorithm for fff-policy TD control using Function Approximation.\n",
     "    Finds the optimal greedy policy while following an epsilon-greedy policy.\n",
@@ -356,7 +402,7 @@
     "    # Create directories for checkpoints and summaries\n",
     "    checkpoint_dir = os.path.join(experiment_dir, \"checkpoints\")\n",
     "    checkpoint_path = os.path.join(checkpoint_dir, \"model\")\n",
-    "    monitor_path = os.path.join(experiment_dir, \"monitor\")\n",
+    "    monitor_path = os.path.join(experiment_dir, \"monitorr\")\n",
     "\n",
     "    if not os.path.exists(checkpoint_dir):\n",
     "        os.makedirs(checkpoint_dir)\n",
@@ -380,21 +426,32 @@
     "    policy = make_epsilon_greedy_policy(\n",
     "        q_estimator,\n",
     "        len(VALID_ACTIONS))\n",
+    "    \n",
+    "    # Record videos\n",
+    "    env = wrappers.Monitor(env, monitor_path, resume=True,\n",
+    "                               video_callable=lambda count: count % record_video_every == 0)\n",
     "\n",
     "    # Populate the replay memory with initial experience\n",
     "    print(\"Populating replay memory...\")\n",
     "    state = env.reset()\n",
     "    state = state_processor.process(sess, state)\n",
     "    state = np.stack([state] * 4, axis=2)\n",
-    "    for i in range(replay_memory_init_size):\n",
+    "    i = 0\n",
+    "    while True:\n",
     "        # TODO: Populate replay memory!\n",
-    "        pass\n",
-    "\n",
-    "    # Record videos\n",
-    "    env.monitor.start(monitor_path,\n",
-    "                      resume=True,\n",
-    "                      video_callable=lambda count: count % record_video_every == 0)\n",
-    "\n",
+    "        action = np.random.choice(len(VALID_ACTIONS))\n",
+    "        next_state, reward, done, _ = env.step(action)\n",
+    "        next_state = np.concatenate((state_processor.process(sess, next_state).reshape((84,84,1)), state[:,:,:3]), axis=2)\n",
+    "        replay_memory.append(Transition(state, action, reward, next_state, done))\n",
+    "        state = next_state\n",
+    "        i+=1\n",
+    "        if done:\n",
+    "            if i > replay_memory_init_size:\n",
+    "                break\n",
+    "            state = env.reset()\n",
+    "            state = state_processor.process(sess, state)\n",
+    "            state = np.stack([state] * 4, axis=2)\n",
+    "        \n",
     "    for i_episode in range(num_episodes):\n",
     "\n",
     "        # Save the current checkpoint\n",
@@ -419,29 +476,45 @@
     "\n",
     "            # TODO: Maybe update the target estimator\n",
     "            if total_t % update_target_estimator_every == 0:\n",
-    "                pass\n",
+    "                copy_model_parameters(sess=sess, estimator1=q_estimator, estimator2=target_estimator)\n",
+    "                target_policy = make_epsilon_greedy_policy(target_estimator, len(VALID_ACTIONS))\n",
     "\n",
+    "            clear_output()\n",
     "            # Print out which step we're on, useful for debugging.\n",
     "            print(\"\\rStep {} ({}) @ Episode {}/{}, loss: {}\".format(\n",
-    "                    t, total_t, i_episode + 1, num_episodes, loss), end=\"\")\n",
+    "                    t, total_t, i_episode + 1, num_episodes, loss))\n",
     "            sys.stdout.flush()\n",
     "\n",
     "            # Take a step in the environment\n",
     "            # TODO: Implement!\n",
+    "            actions_prob = policy(sess, state, epsilon)\n",
+    "            action = np.random.choice(len(VALID_ACTIONS), p=actions_prob)\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
+    "            next_state = np.concatenate((state_processor.process(sess, next_state).reshape((84,84,1)), state[:,:,:3]), axis=2)\n",
     "\n",
     "            # If our replay memory is full, pop the first element\n",
     "            if len(replay_memory) == replay_memory_size:\n",
     "                replay_memory.pop(0)\n",
     "\n",
     "            # TODO: Save transition to replay memory\n",
+    "            replay_memory.append(Transition(state, action, reward, next_state, done))\n",
     "\n",
     "            # Update statistics\n",
     "            stats.episode_rewards[i_episode] += reward\n",
     "            stats.episode_lengths[i_episode] = t\n",
     "\n",
-    "            # TODO: Sample a minibatch from the replay memory\n",
-    "            # TODO: Calculate q values and targets\n",
-    "            # TODO Perform gradient descent update\n",
+    "            # Sample a minibatch from the replay memory\n",
+    "            samples = random.sample(replay_memory, batch_size)\n",
+    "            states_batch, action_batch, reward_batch, next_states_batch, done_batch = map(np.array, zip(*samples))\n",
+    "\n",
+    "            # Calculate q values and targets\n",
+    "            q_values_next = target_estimator.predict(sess, next_states_batch)\n",
+    "            targets_batch = reward_batch + np.invert(done_batch).astype(np.float32) * discount_factor * np.amax(q_values_next, axis=1)\n",
+    "\n",
+    "            # Perform gradient descent update\n",
+    "            states_batch = np.array(states_batch)\n",
+    "            loss = q_estimator.update(sess, states_batch, action_batch, targets_batch)\n",
+    "\n",
     "\n",
     "            if done:\n",
     "                break\n",
@@ -460,8 +533,8 @@
     "            episode_lengths=stats.episode_lengths[:i_episode+1],\n",
     "            episode_rewards=stats.episode_rewards[:i_episode+1])\n",
     "\n",
-    "    env.monitor.close()\n",
-    "    return stats"
+    "#     env.monitor.close()\n",
+    "    return #stats"
    ]
   },
   {
@@ -470,7 +543,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "Step 235 (2084) @ Episode 9/10000, loss: 0.00028350885259\n"
+     ]
+    }
+   ],
    "source": [
     "tf.reset_default_graph()\n",
     "\n",
@@ -487,26 +569,30 @@
     "# State processor\n",
     "state_processor = StateProcessor()\n",
     "\n",
-    "# Run it!\n",
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.initialize_all_variables())\n",
-    "    for t, stats in deep_q_learning(sess,\n",
-    "                                    env,\n",
-    "                                    q_estimator=q_estimator,\n",
-    "                                    target_estimator=target_estimator,\n",
-    "                                    state_processor=state_processor,\n",
-    "                                    experiment_dir=experiment_dir,\n",
-    "                                    num_episodes=10000,\n",
-    "                                    replay_memory_size=500000,\n",
-    "                                    replay_memory_init_size=50000,\n",
-    "                                    update_target_estimator_every=10000,\n",
-    "                                    epsilon_start=1.0,\n",
-    "                                    epsilon_end=0.1,\n",
-    "                                    epsilon_decay_steps=500000,\n",
-    "                                    discount_factor=0.99,\n",
-    "                                    batch_size=32):\n",
+    "try:\n",
+    "    # Run it!\n",
+    "    with tf.Session() as sess:\n",
+    "        sess.run(tf.initialize_all_variables())\n",
+    "        for t, stats in deep_q_learning(sess,\n",
+    "                                        env,\n",
+    "                                        q_estimator=q_estimator,\n",
+    "                                        target_estimator=target_estimator,\n",
+    "                                        state_processor=state_processor,\n",
+    "                                        experiment_dir=experiment_dir,\n",
+    "                                        num_episodes=10000,\n",
+    "                                        replay_memory_size=500000,\n",
+    "                                        replay_memory_init_size=50000,\n",
+    "                                        update_target_estimator_every=10000,\n",
+    "                                        epsilon_start=1.0,\n",
+    "                                        epsilon_end=0.1,\n",
+    "                                        epsilon_decay_steps=500000,\n",
+    "                                        discount_factor=0.99,\n",
+    "                                        batch_size=32):\n",
     "\n",
-    "        print(\"\\nEpisode Reward: {}\".format(stats.episode_rewards[-1]))"
+    "            print(\"\\nEpisode Reward: {}\".format(stats.episode_rewards[-1]))\n",
+    "            \n",
+    "except KeyboardInterrupt:\n",
+    "    pass"
    ]
   }
  ],
@@ -526,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
