--- a/DQN/Deep Q Learning Solution.ipynb
+++ b/DQN/Deep Q Learning Solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,18 +27,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-01-13 00:50:37,648] Making new env: Breakout-v0\n"
+     ]
+    }
+   ],
    "source": [
     "env = gym.envs.make(\"Breakout-v0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +75,7 @@
     "            self.output = tf.image.rgb_to_grayscale(self.input_state)\n",
     "            self.output = tf.image.crop_to_bounding_box(self.output, 34, 0, 160, 160)\n",
     "            self.output = tf.image.resize_images(\n",
-    "                self.output, 84, 84, method=tf.image.ResizeMethod.NEAREST_NEIGHBOR)\n",
+    "                self.output, [84, 84], method=tf.image.ResizeMethod.NEAREST_NEIGHBOR)\n",
     "            self.output = tf.squeeze(self.output)\n",
     "\n",
     "    def process(self, sess, state):\n",
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -197,11 +205,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-11-add3ae41272c>:10 in <module>.: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2017-01-13 01:13:43,924] From <ipython-input-11-add3ae41272c>:10 in <module>.: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.03966802  0.04335754  0.          0.05329199]\n",
+      " [ 0.03966802  0.04335754  0.          0.05329199]]\n",
+      "99.0359\n"
+     ]
+    }
+   ],
    "source": [
     "# For Testing....\n",
     "\n",
@@ -232,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -511,46 +547,51 @@
     "# State processor\n",
     "state_processor = StateProcessor()\n",
     "\n",
-    "# Run it!\n",
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.initialize_all_variables())\n",
-    "    for t, stats in deep_q_learning(sess,\n",
-    "                                    env,\n",
-    "                                    q_estimator=q_estimator,\n",
-    "                                    target_estimator=target_estimator,\n",
-    "                                    state_processor=state_processor,\n",
-    "                                    experiment_dir=experiment_dir,\n",
-    "                                    num_episodes=10000,\n",
-    "                                    replay_memory_size=500000,\n",
-    "                                    replay_memory_init_size=50000,\n",
-    "                                    update_target_estimator_every=10000,\n",
-    "                                    epsilon_start=1.0,\n",
-    "                                    epsilon_end=0.1,\n",
-    "                                    epsilon_decay_steps=500000,\n",
-    "                                    discount_factor=0.99,\n",
-    "                                    batch_size=32):\n",
+    "try:\n",
+    "    # Run it!\n",
+    "    with tf.Session() as sess:\n",
+    "        sess.run(tf.initialize_all_variables())\n",
+    "        for t, stats in deep_q_learning(sess,\n",
+    "                                        env,\n",
+    "                                        q_estimator=q_estimator,\n",
+    "                                        target_estimator=target_estimator,\n",
+    "                                        state_processor=state_processor,\n",
+    "                                        experiment_dir=experiment_dir,\n",
+    "                                        num_episodes=10000,\n",
+    "                                        replay_memory_size=500000,\n",
+    "                                        replay_memory_init_size=50000,\n",
+    "                                        update_target_estimator_every=10000,\n",
+    "                                        epsilon_start=1.0,\n",
+    "                                        epsilon_end=0.1,\n",
+    "                                        epsilon_decay_steps=500000,\n",
+    "                                        discount_factor=0.99,\n",
+    "                                        batch_size=32):\n",
     "\n",
-    "        print(\"\\nEpisode Reward: {}\".format(stats.episode_rewards[-1]))"
+    "            print(\"\\nEpisode Reward: {}\".format(stats.episode_rewards[-1]))\n",
+    "            \n",
+    "except \"KeyboardInterrupt\":\n",
+    "    pass"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
