--- a/TD/Q-Learning.ipynb
+++ b/TD/Q-Learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -71,11 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-d89870df024c>, line 34)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-d89870df024c>\"\u001b[0;36m, line \u001b[0;32m34\u001b[0m\n\u001b[0;31m    print(\"\\rEpisode {}/{}.\".format(i_episode + 1, num_episodes), end=\"\")\u001b[0m\n\u001b[0m                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def q_learning(env, num_episodes, discount_factor=1.0, alpha=0.5, epsilon=0.1):\n",
     "    \"\"\"\n",
@@ -110,10 +119,22 @@
     "    for i_episode in range(num_episodes):\n",
     "        # Print out which episode we're on, useful for debugging.\n",
     "        if (i_episode + 1) % 100 == 0:\n",
-    "            print(\"\\rEpisode {}/{}.\".format(i_episode + 1, num_episodes), end=\"\")\n",
+    "            print(\"\\rEpisode {}/{}.\".format(i_episode + 1, num_episodes))\n",
     "            sys.stdout.flush()\n",
     "        \n",
     "        # Implement this!\n",
+    "        state = env.reset()\n",
+    "        for t in itertools.count():\n",
+    "            action = np.random.choice(np.arange(env.nA), p=policy(state))\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
+    "            action_ = np.argmax(policy(next_state))\n",
+    "            Q[state][action] += alpha * (reward + discount_factor*Q[next_state][action_] - Q[state][action])\n",
+    "            stats.episode_rewards[i_episode] += reward\n",
+    "            stats.episode_lengths[i_episode] = t\n",
+    "\n",
+    "            if done:\n",
+    "                break\n",
+    "            state = next_state\n",
     "    \n",
     "    return Q, stats"
    ]
@@ -190,22 +211,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
