--- a/TD/Windy Gridworld Playground.ipynb
+++ b/TD/Windy Gridworld Playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -65,15 +65,6 @@
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "\n",
-      "(33, -1.0, False, {'prob': 1.0})\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  x  o  o  o  T  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "o  o  o  o  o  o  o  o  o  o\n",
-      "\n",
       "(24, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
@@ -86,6 +77,15 @@
       "(15, -1.0, False, {'prob': 1.0})\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  x  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  T  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
+      "\n",
+      "(6, -1.0, False, {'prob': 1.0})\n",
+      "o  o  o  o  o  o  x  o  o  o\n",
+      "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
       "o  o  o  o  o  o  o  T  o  o\n",
       "o  o  o  o  o  o  o  o  o  o\n",
@@ -110,7 +110,7 @@
     "print(env.step(1))\n",
     "env.render()\n",
     "\n",
-    "print(env.step(2))\n",
+    "print(env.step(1))\n",
     "env.render()\n",
     "\n",
     "print(env.step(1))\n",
@@ -119,25 +119,35 @@
     "print(env.step(1))\n",
     "env.render()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
