--- a/DQN/Deep Q Learning.ipynb
+++ b/DQN/Deep Q Learning.ipynb
@@ -508,7 +508,7 @@
     "            states_batch, action_batch, reward_batch, next_states_batch, done_batch = map(np.array, zip(*samples))\n",
     "\n",
     "            # Calculate q values and targets\n",
-    "            q_values_next = target_estimator.predict(sess, next_states_batch)\n",
+    "            q_values_next = q_estimator.predict(sess, next_states_batch)\n",
     "            targets_batch = reward_batch + np.invert(done_batch).astype(np.float32) * discount_factor * np.amax(q_values_next, axis=1)\n",
     "\n",
     "            # Perform gradient descent update\n",
