Update Deep Q Learning.ipynb

--- a/DQN/Deep Q Learning.ipynb
+++ b/DQN/Deep Q Learning.ipynb
@@ -477,7 +477,6 @@
     "            # TODO: Maybe update the target estimator\n",
     "            if total_t % update_target_estimator_every == 0:\n",
     "                copy_model_parameters(sess=sess, estimator1=q_estimator, estimator2=target_estimator)\n",
-    "                target_policy = make_epsilon_greedy_policy(target_estimator, len(VALID_ACTIONS))\n",
     "\n",
     "            clear_output()\n",
     "            # Print out which step we're on, useful for debugging.\n",
@@ -508,7 +507,7 @@
     "            states_batch, action_batch, reward_batch, next_states_batch, done_batch = map(np.array, zip(*samples))\n",
     "\n",
     "            # Calculate q values and targets\n",
-    "            q_values_next = q_estimator.predict(sess, next_states_batch)\n",
+    "            q_values_next = target_estimator.predict(sess, next_states_batch)\n",
     "            targets_batch = reward_batch + np.invert(done_batch).astype(np.float32) * discount_factor * np.amax(q_values_next, axis=1)\n",
     "\n",
     "            # Perform gradient descent update\n",
